--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 numpy==2.0.2 #testing, might remove if no longer allow numpy input to tensor
 # pillow==10.4.0 #for image processing
-# opencv-contrib-python==4.10.0.84
+opencv-contrib-python==4.10.0.84
+matplotlib==3.9.2
