--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,11 @@ tests/benchmarks/res
 docs/report.*
 !docs/report.pdf
 
+ann/*/__pycache__
+ann/*/*.pyc
+ann/__pycache__  
+ann/*.pyc  
+
 TODO.md
 
 test/
